# UNN_ITMM

./: .gitignore  CMakeLists.txt  function.cmake
Image/: CMakeLists.txt  build.txt
Image/Libs/Colorize/: CMakeLists.txt  IMethod.cpp  IMethod.h
Image/Libs/gtest/: CMakeLists.txt
Image/Libs/image/: CMakeLists.txt  image.cpp  image.h
Image/Libs/tests/: test_main.cpp  test_read.cpp
Image/main/: main.cpp
Lab1/: CMakeLists.txt  main.cpp
Lab1/MyStaticLib/: image.cpp  image.h
Lab2/: CMakeLists.txt  main.cpp
Lab2/MyStaticLib/: CMakeLists.txt  image.cpp  image.h
Lab3/: CMakeLists.txt
Lab3/include/: Calculate.h  Exeptions.h  Lexema.h  SQ.h  Suntax.h
Lab3/samples/: CMakeLists.txt  main.cpp
Lab3/src/: CMakeLists.txt  Calculate.cpp  Lexema.cpp  SQ.cpp  Suntax.cpp
Lab3/test/: test_parser.cpp  test_tmatrix.cpp  test_tvector.cpp
List/: CMakeLists.txt  Stack.h  list.h  main.cpp
Robot/: Buffer.h  CMakeLists.txt  main.cpp
Stack/: main.cpp
StaticLib/: CMakeLists.txt  main.cpp
StaticLib/MyLib/: CMakeLists.txt  image.cpp  image.h
ring_buver/: CMakeLists.txt  RingBuver.h  StackOnRingBuver.h  main.cpp
